--- a/HowtoFind-Lecture.Rmd
+++ b/HowtoFind-Lecture.Rmd
@@ -42,11 +42,13 @@ For agricultural commodities in the United States, the [CME Group](http://www.cm
 - They also list futures contracts for livestock products such as live cattle, lean hogs, and feeder cattle. 
 - 'Soft' commodities that trade on the CME Group are cocoa, coffee, and sugar. 
 - The CME Group also lists energy commodity products for crude oil, natural gas, ethanol, and other products. 
+# Futures Data Sources 
 
 This book will focus most intently on the grain and oil-seed contracts, with some topics related to the cattle and energy contracts considered. Many of these futures contracts are considered to be the main price setting function for the commodity in the world. 
 
 Chicago Board of Trade (owned by the CME Group) futures prices of corn and soybeans are considered the 'World Price' of corn and soybeans. Meaning that all over the globe, prices for these commodities are set based on what the price of corn and soybeans are trading on the CME Group exchanges.     
 
+# Futures Data Sources 
 
 Real-time (10-min delay) data can be obtained directly from the CME Group's website. There you can view the most recent quotes, and some charting capability is provided as well. Typically, however, it is more convenient to obtain market quotes from third party vendors like [Yahoo Finance](http://finance.yahoo.com/), [Quandl](https://www.quandl.com/collections/futures), [barchart](http://www.barchart.com/futures/marketoverview) (subscription required), or others. Those sources offer a more flexible interface for viewing on the web, and provide utility to download recent price history. 
 
@@ -61,18 +63,37 @@ The table below lists selected grain and oilseed, livestock, and energy contract
 For example, the first row of the table illustrates that the general convention for representing the CBOT corn futures contract expiring in December of 2015 is CZ15. The first letter represents the commodity symbol, C for corn; the second letter represents the expiration month, Z for December; and the final two numerals represent the year of expiry, 15 for 2015. 
 
 #
-
 |Commodity   | Symbol    |  Expiration Months and Symbol                            | General Ticker         | Yahoo Finance Ticker  | Quandl Ticker
 |:----------|:---------:|:--------------------------------------------------------|:----------------------|:---------------------|:---------------------| 
-| Corn       | C         |March (H), May (K), July (N), September (U), December (Z) | CZ15, December 2015 Corn|  [CZ15.cbt](http://finance.yahoo.com/q;_ylt=Aq08zZO8Y0A5GdeM2aZSNJJ.FJF4?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=cz15.cbt)| [CME/CZ2015](https://www.quandl.com/data/CME/CZ2015-Corn-Futures-December-2015-CZ2015) |
-| Soybeans   | S         |January (F), March (H), May (K), July (N), August (Q), September (U), November (X) | SX15, November 2015 Soybean|  [SX15.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=sx15.cbt) | [CME/SX2015](https://www.quandl.com/data/CME/SX2015-Soybean-Futures-November-2015-SX2015) |
-| SRW Wheat  | W         |March (H), May (K), July (N), September (U), December (Z) | WZ15, December 2015 SRW Wheat|  [WZ15.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=wz15.cbt) | [CME/WZ2015](https://www.quandl.com/data/CME/WZ2015-Wheat-Futures-December-2015-WZ2015) |
-| Lean Hogs | HE         | Feb (G), Apr (J), May (K), Jun (M), Jul (N), Aug (Q), Oct (V), Dec (Z) | HEZ15, December 2015 Lean Hogs|  [HEZ15.cme](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=HEZ15.CME%2C) | [CME/LNZ2015](https://www.quandl.com/data/CME/LNZ2015-Lean-Hog-Futures-December-2015-LNZ2015) |
-| Crude Oil | CL         | All months | CLU15, September 2015 Light Sweet Crude Oil|  [CLU15.nym](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=clu15.nym) | [CME/CLU2015](https://www.quandl.com/data/CME/CLU2015-Crude-Oil-Futures-September-2015-CLU2015)|
+| Corn       | C         |March (H), May (K), July (N), September (U), December (Z) | CZ16, December 2016 Corn|  [CZ16.cbt](http://finance.yahoo.com/q;_ylt=Aq08zZO8Y0A5GdeM2aZSNJJ.FJF4?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=cz16.cbt)| [CME/CZ2016](https://www.quandl.com/data/CME/CZ2016-Corn-Futures-December-2016-CZ2015) |
+| Soybeans   | S         |January (F), March (H), May (K), July (N), August (Q), September (U), November (X) | SX16, November 2016 Soybean|  [SX16.cbt](http://finance.yahoo.com/quote/SX16.CBT/?p=SX16.CBT) | [CME/SX2016](https://www.quandl.com/data/CME/SX2016-Soybean-Futures-November-2016-SX2016) |
+| Canola/Rapeseed|  RS  | January (F), March (H), May (K), July (N), November (X) | RSX16, November 2016 | [RSX16](http://www.barchart.com/quotes/futures/RSX16) (Barchart) | [ICE/RSX2016](https://www.quandl.com/data/ICE/RSX2016-Canola-Futures-November-2016-RSX2016)
+| HRW Wheat  | KW  | March (H), May (K), July (N), September (U), December (Z) | KWN17, July 2017 KC Wheat | [KWN17.cbt](https://finance.yahoo.com/quote/KWN17.CBT?p=KWN17.CBT) |[CME/KWN2017](https://www.quandl.com/data/CME/KWN2017-KC-HRW-Wheat-Futures-July-2017-KWN2017) |
+| SRW Wheat  | W         |March (H), May (K), July (N), September (U), December (Z) | WZ16, December 2016 SRW Wheat|  [WZ16.cbt](http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&fr=uh3_finance_vert_gs&type=2button&s=wz16.cbt) |  [CME/WZ2016](https://www.quandl.com/data/CME/WZ2016-Wheat-Futures-December-2016-WZ2016) |
+| HRS Wheat  | MW  | March (H), May (K), July (N), September (U), December (Z) | MWZ16, Dec 2017 Minn Wheat | NA | [MGE/MWZ2016](https://www.quandl.com/data/MGEX/MWZ2016-Minneapolis-Hard-Red-Spring-Wheat-Futures-December-2016-MWZ2016) |
+| Live Cattle | LC | Feb (G), Apr (J), Jun (M), Aug (Q), Oct (V), Dec (Z) | LCZ16, December 2016 Live Cattle | [LCZ16.CME](http://finance.yahoo.com/quote/LCZ16.CME/?p=LCZ16.CME) | [CME/LCZ2016](https://www.quandl.com/data/CME/LCZ2016-Live-Cattle-Futures-December-2016-LCZ2016)
+| Lean Hogs | LH         | Feb (G), Apr (J), May (K), Jun (M), Jul (N), Aug (Q), Oct (V), Dec (Z) | LHZ16, December 2016 Lean Hogs|  [LHZ16.cme](http://finance.yahoo.com/quote/LHZ16.CME/?p=LHZ16.CME) | [CME/LNZ2016](https://www.quandl.com/data/CME/LNZ2016-Lean-Hog-Futures-December-2016-LNZ2016) |
+| Crude Oil | CL         | All months | CLZ16, Dec 2016 Light Sweet Crude Oil|  [CLZ16.nym](http://finance.yahoo.com/quote/CLZ16.NYM/?p=CLZ16.NYM) | [CME/CLZ2016](https://www.quandl.com/data/CME/CLZ2016-Crude-Oil-Futures-September-2016-CLZ2016)|
+| RBOB Gasoline | RB | All months | RBZ16, Dec 2016 RBOB Gas | [RBZ16.nym](https://finance.yahoo.com/quote/RBZ16-1.NYM?p=RBZ16-1.NYM)| [CME/RBZ2016](https://www.quandl.com/data/CME/RBZ2016-RBOB-Gasoline-Physical-Futures-December-2016-RBZ2016) |
+| Heating Oil | HO | All months | HOZ16, Dec 2016 HO (Ultra low sulfer deisel) | [HOZ16.NYM](https://finance.yahoo.com/quote/HOZ16.NYM/?p=HOZ16.NYM) | [CME/HOZ2016](https://www.quandl.com/data/CME/HOZ2016-NY-Harbor-ULSD-Futures-December-2016-HOZ2016) |
+| Ethanol | EH | All Months | EHZ16, Dec 2016 Ethanol Futures | [EHZ16.CBT](https://finance.yahoo.com/quote/EHZ16-2.CBT/futures?p=EHZ16-2.CBT) | [CME/EHZ2016](https://www.quandl.com/data/CME/EHZ2016-Ethanol-Futures-December-2016-EHZ2016) |
 
 : Table 2. Conventions for Building Futures Contract Ticker Symbols for Selected Commodities
 
 While every market participant needs to know the current price, forecasting and decision making requires the study of historical prices and other important market variables. Historical futures price data is available for free and from subscription based services from [Quandl](https://quandl.com) and [Barchart](https://barchart.com) mentioned in the paragraph above. Historical [futures price data](http://farmdoc.agricharts.com/markets/historic.php) and [average price recieved](http://www.farmdoc.illinois.edu/manage/pricehistory/price_history.html) is also available from [farmdoc](http://www.farmdoc.illinois.edu), the online extension presence of the University of Illinois' [Agricultural and Consumer Economics](http://ace.illinois.edu/) department. 
+
+#
+
+Table 3 provides some links to spread charts for commodity spreads we will cover in this class. 
+
+| Spread | Link |
+|:------|:------|
+| Soybean Crush | [Barchart Spread Chart](http://www.barchart.com/chart.php?ss=1&spread=-ZS*1%2B2.2*ZM*1%2B11*ZL*1&p=DO&d=M&sd=&ed=&size=M&log=0&t=LINE&g=1&sh=100&indicators=&addindicator=#jump) |
+| Cattle Crush  | [ISU Spread Calculation](http://www2.econ.iastate.edu/estimated-returns/Finishing%20Steer%20Calves%20Chart.pdf) [ISU Livestock Returns](http://www2.econ.iastate.edu/estimated-returns/) |
+|Corn Crush | [ISU Ethanol Grind Margin](http://www.extension.iastate.edu/agdm/refirst.html) (Download Ethanol Profitability spreadsheet. Look at Grind Margin chart) |
+| Crude Oil Crack Spread | [Barchart Spread](http://www.barchart.com/chart.php?ss=1&spread=%28-3*CL*1+%2B+2*RB*1*42+%2B+HO*1*42%29+%2F+3&p=DO&d=M&sd=&ed=&size=M&log=0&t=LINE&g=1&sh=100&indicators=&addindicator=#jump)
+
+: Table 3. Commodity Spreads
 
 # Reports and Data from the USDA
 
@@ -130,7 +151,7 @@ Crop Production
 
 Crop Progress and Condition
 
-:    Crop Progress and Condition reports are issued every **Monday** during the planting, growing, and harvest season for major crops in the United States. The weekly updates provide market participants critical information about the status of the crop. Nass surveys approximately 4,000 individuals in major growing areas familiar with the crops. Check out one of the weekly tables [August 3, 2015](http://usda.mannlib.cornell.edu/usda/current/CropProg/CropProg-08-31-2015.pdf) and summary charts [US Progress and Condition](http://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&_Condition/2015/US_2015.pdf)
+:    Crop Progress and Condition reports are issued every **Monday** during the planting, growing, and harvest season for major crops in the United States. The weekly updates provide market participants critical information about the status of the crop. Nass surveys approximately 4,000 individuals in major growing areas familiar with the crops. Check out one of the weekly tables [August 29, 2016](http://usda.mannlib.cornell.edu/usda/current/CropProg/CropProg-08-29-2016.txt) and summary charts [US Progress and Condition](https://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&_Condition/2016/US_2016.pdf)
 
 # USDA Reports Influential in Commodity Markets
 
