--- a/ForecastingProduction.Rmd
+++ b/ForecastingProduction.Rmd
@@ -26,13 +26,13 @@ Like many other agricultural variables we would like to forecast, our methodolog
 Historical acres planted and harvested can be found from USDA NASS. 
 
 > ## Steps to download historical acreage data: 
-> 1. Go to [http://www.nass.usda.gov/Data_and_Statistics/index.asp](http://www.nass.usda.gov/Data_and_Statistics/index.asp)
-> 2. Click *Crops and Plants* in the menu on the left of the screen
-> 3. In the query, choose *Crops* and then *Field Crops*
-> 4. Hold down the control key and choose corn
-> 5. Click the check boxes for *ACRES PLANTED*, *ACRES HARVESTED*, *Price Recieved*, and *Yield* and click the *CONTINUE* button
-> 6. You will see a small table; in the bottom right-right hand corner there is a *more...* link. Click it
-> 7. Choose *Save::Spreadsheet*, and a Microsoft Excel file will download. 
+> 1. Go to [https://www.nass.usda.gov/Quick_Stats/Lite/index.php](https://www.nass.usda.gov/Quick_Stats/Lite/index.php)
+> 2. Click *Crops* in the menu 
+> 3. In the query, choose *Field Crops*
+> 4. Choose corn
+> 5. Click *Acreage, Yeild, Production, and Price*
+> 6. Select the years you want. Hold the Ctrl key to select multiple.
+> 7. Click *Get Data*. 
 
 ![Figure 1: Historical Acreage Data](images\ACRES_historical.png)
 
