--- a/ForecastingProduction.Rmd
+++ b/ForecastingProduction.Rmd
@@ -48,13 +48,13 @@ Based on the information in Figure 2, one might predict a decline in corn plante
 
 For example, the following graph shows the December 2016 and November 2016 corn and soybean futures prices respectively for 8/1/2015 to 9/10/2015. The ratio is not graphed here, but since the price of corn is rising relative to the price of soybeans, the relative profitability has drifted toward corn over this time frame. Forecasts of corn and soybean acreage for Spring 2016 should take this into account. 
 
-![Figure 3: 2016 Corn (December) and Soybean (November) Futures Prices from 8/1/2015 to 9/10/2015](images\cz16_sx16.9.10.15.png)
+![Figure 3: 2016 Corn (December) and Soybean (November) Futures Prices from 8/1/2016 to 9/15/2016](images\c-s2017.png)
 
 ## Forecasting Harvested Acres
 
 After forecasting *Planted Acres* one still needs to provide a forecast for *Harvested Acres*. Figure 4 shows historical trends in *Harvested Acres* relative to *Planted Acres*. The difference between these two variables is provided in grey with units along the right axis for convenience. 
 
-![Figure 4: Corn Planted Acres and Harvested Acres](Excel-files\ForecastingProduction-HistoricalAcreage_files\image002.png)
+![Figure 4: Corn Planted Acres and Harvested Acres](Excel-files\ForecastingProduction-HistoricalAcreage_files\image001.png)
 
 Harvested acres tends to be a fairly stable number, averaging 7.6 million acres between 2000 and 2014. Although, years when this variable deviates most from trend corresponds to years of exceptionally poor production. See 2012 and 2002 as examples. These years marginal reductions in production are explained by reduced yield and abandoned acres, so forecasting the harvested acres number accurately becomes very important to accurately forecasting production in shortfall years. 
 
@@ -62,15 +62,15 @@ Harvested acres tends to be a fairly stable number, averaging 7.6 million acres 
 
 Just like in forecasting acreage, we have different procedures for forecasting yield prior to planting. Before the summer growing season gets underway, trend yield. The trouble is, where to start?
 
-![Figure 5: Historical Yields since 1866](Excel-files\ForecastingProduction-HistoricalAcreage_files\image007.png)
+![Figure 5: Historical Yields since 1866](Excel-files\ForecastingProduction-HistoricalAcreage_files\image005.png)
 
 USDA has records on yield that go back to 1866. While one often thinks more information is better when forecasting, the old yield estimates are no longer useful for forecasting current yield. Technological progress caused yields to take of in the 1950's and they have been climbing ever since. In the forecasting world, this is called *structural change* or a *structural break*. If *structural change* has occurred, the world looks so different now than it did before the structural change that data from before the break just is not useful for forecasting going forward. 
 
 It turns out that if you estimate a trend-line beginning with 1952, with 1980, or with pretty much any date in between, you will get an estimate that is roughly similar. 
 
-![](Excel-files\ForecastingProduction-HistoricalAcreage_files\image009.png) 
+![](Excel-files\ForecastingProduction-HistoricalAcreage_files\image007.png) 
 
-![Figure 6: Historical Yields since 1952 and 1980](Excel-files\ForecastingProduction-HistoricalAcreage_files\image017.png) 
+![Figure 6: Historical Yields since 1952 and 1980](Excel-files\ForecastingProduction-HistoricalAcreage_files\image013.png) 
 
 For example, using the trend-line beginning with 1952 to forecast yield we come up with $Yield^{2015} = 1.9066*2015 - 3677.9 = 163.899$. While, using the trend-line beginning with 1980 to forecast yield we come up with $Yield^{2015} = 1.8619*2015 - 3588.9 = 162.8285$.
 
@@ -82,18 +82,17 @@ The job of the analyst who is not employed by the USDA is most likely to anticip
 
 An independent analyst will not have the same level of resources the USDA deploys to provide monthly yield estimates; he or she will have to rely on historical data and a basic understanding of how weather affects crop yields.  Figure 8 below plots each year's deviation from trend yield since 1980. The first plot is in levels (i.e., $Yield_t - Trend Yield_t$); whereas the second plot is in percent terms (i.e., $\ln{Yield_t} - \ln{Trend Yield_t}$. Notice that the shape looks roughly the same, but the 2012 drought looks worse expressed in level deviations than the short crops of 1983, 1988, and 1993. This is because yield is trending higher. In percentage terms we see that the 2012 drought was equally as bad as 1983 and not quite as bad as 1988.   
 
-![](Excel-files\ForecastingProduction-HistoricalAcreage_files\image015.png)
+![](Excel-files\ForecastingProduction-HistoricalAcreage_files\image016.png)
 
-![Figure 7: Deviations from Trend in both Level and Percent (using trend since 1980)](Excel-files\ForecastingProduction-HistoricalAcreage_files\image019.png)
+![Figure 7: Deviations from Trend in both Level and Percent (using trend since 1980)](Excel-files\ForecastingProduction-HistoricalAcreage_files\image017.png)
 
 Short of an advanced agronomic model that can take into account planting date, precipitation, [growing degree days](https://en.wikipedia.org/wiki/Growing_degree-day), or ability to estimate yield from remote sensing technology [@unganai1998drought], we will have to resort to the *similar year approach*.  
 
 Analysts often estimate deviations from trend yield by finding year similar to the current one in terms of weather. The assumption is that if the weather patterns were similar then the percent deviation from trend yield should be similar as well. Note here that percent deviation is preferable so you do not need to adjust for the increasing trend in yield as you look backward to a similar year. 
 
-An alternative approach would be to use the *Crop Condition Report* and find a year in recent history that had a similar percent of the crop rated *Good/Excellent*. Figure 8 below shows how *Good* + *Excellent* crop condition ratings relate to percent deviations in trend yield. They should be at least positively correlated, but in fact some of the worst years (1988 and 2012 jump out) have relatively high crop condition ratings the final week of reporting while yields were exceptionally low in those years.  
+An alternative approach would be to use the *Crop Condition Report* and find a year in recent history that had a similar percent of the crop rated *Good/Excellent*. Figure 8 below shows how *Good* + *Excellent* crop condition ratings relate to percent deviations in trend yield. They should be at least positively correlated, and in fact starting in the late 90's this measure began to correlate strongly with the final yeild. 
 
-
-![Figure 8: *Good* plus *Excellent* Crop Condition Ratings in Final Week of Reporting versus Percent Deviations in Yields](Excel-files\ForecastingProduction-HistoricalAcreage_files\image023.png)
+![Figure 8: *Good* plus *Excellent* Crop Condition Ratings in Final Week of Reporting versus Percent Deviations in Yields](Excel-files\ForecastingProduction-HistoricalAcreage_files\image021.png)
 
 # Forecasting Production
 
