update 2.4 tables and figures

--- a/ForecastingUseof.Rmd
+++ b/ForecastingUseof.Rmd
@@ -23,20 +23,20 @@ As we have noted before, historical use patterns are the first place to start wh
 
 Let us begin by looking at the Food, Alcohol and Industrial category. These data were queried from the [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS. The categories here are a little more dissaggreagated than those presented in the USDA WASDE balance sheets, but they are roughly the same. For example, in figure 1 below we show the *Food, Alcohol, and Industrial* use category. This omits seed from the *Food, Seed, and Industrial* category in the WASDE balance sheet. The Feed Grains database actually breaks out the seed use as its own column, but corn used for seed is a very small proportion of production and it is largely predictable from year to year. 
 
-![Figure 1: Corn Food, Alcohol, and Industrial Use, Quarterly 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image010.png)
+![Figure 1: Corn Food, Alcohol, and Industrial Use, Quarterly 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image013.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
 Figure 1 shows a dramatic uptrend in the Food, Alcohol and Industrial use category. This is due to the dramatic increase in the production of ethanol starting around 2005/2006 and plateauing around 2010 when U.S. ethanol consumption roughly hit the 'blend-wall' where ethanol makes up 10% of the retail gasoline supply. 
 
-![Figure 2: Corn Food, Alchohol, and Industrial Use, Annual 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image013.png)
+![Figure 2: Corn Food, Alchohol, and Industrial Use, Annual 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image001.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
 Figure 2 shows the same data, but the quarterly figures are aggregated to the marketing year total. In both figures 1 and 2 the rationing effects of high prices that occurred as a result of the drought in 2012. 
 
 
-![Figure 3: Corn Food, Alchohol, and Industrial Use, Annual 1990-2015 as a percentage of production](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image014.png)
+![Figure 3: Corn Food, Alchohol, and Industrial Use, Annual 1990-2016 as a percentage of production](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image009.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
@@ -46,13 +46,13 @@ From figure 3 it is easier to see what share of the crop the large increase in c
 
 Quarterly corn exports are displayed in figure 4. Unlike Food, alcohol and industrial use, exports tend to have a very seasonal or cyclical pattern. Exports are large in the second quarter of the marketing year, December to February, right after we harvest the new crop. This is when stocks are most plentiful and prices are at season lows in years exhibiting an upward sloped forward curve. 
 
-![Figure 4: Corn Exports, Quarterly 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image023.png)
+![Figure 4: Corn Exports, Quarterly 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image014.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
 Displaying the same data in Figure 5, but aggregating to an annual frequency, we see the marketing seasonality smoothed away. 
 
-![Figure 5: Corn Exports, Annual 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image025.png)
+![Figure 5: Corn Exports, Annual 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image023.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
@@ -60,7 +60,7 @@ On average, it appears that exports follow a constant trend-line with variation 
 
 In figure 6 we display annual corn exports as a percentage of corn production. 
 
-![Figure 6: Corn Exports, Annual 1990-2015 as a percentage of corn production](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image024.png)
+![Figure 6: Corn Exports, Annual 1990-2016 as a percentage of corn production](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image029.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
@@ -71,14 +71,14 @@ The year-to-year variation is caused by price fluctuations with low prices encou
 
                    
 
-: Table 1: Top 10 Importers of U.S. Corn 2010/2011 through 2014/2015 Marketing Years, Ranked in Descending Order for Marketing Year 2014/2015 (1,000 Metric Tons)
+: Table 1: Top 10 Importers of U.S. Corn 2011/2012 through 2015/2016 Marketing Years, Ranked in Descending Order for Marketing Year 20152016 (1,000 Metric Tons)
 
 ```{r, echo=FALSE, warning=FALSE}
 library(Kmisc)
 library(knitr)
 corn_importers <- read.csv('Excel-files/ForecastingUseof-corn_importers.csv', header = TRUE)
-kable(corn_importers, align = 'l',  col.names = c("COUNTRY", "EXPORTS 2014/2015", 	"RANK",	"EXPORTS 2013/2014",	"RANK",	
-                                                              "EXPORTS 2012/2013",	"RANK",	"EXPORTS 2011/2012",	"RANK",	"EXPORTS 2010/2011",	"RANK"))
+kable(corn_importers, align = 'l',  col.names = c("COUNTRY", "EXPORTS 2015/2016", 	"RANK",	"EXPORTS 2014/2015",	"RANK",	
+                                                              "EXPORTS 2013/2014",	"RANK",	"EXPORTS 2012/2013",	"RANK",	"EXPORTS 2010/2011",	"RANK"))
 
 ```
 
@@ -101,7 +101,7 @@ Feed\&Residual = (Production + \epsilon_{prod}) + (Imports + \epsilon_{import}) 
 
 Figure 7 below displays the Feed and Residual category since 1990. 
 
-![Figure 7: Feed and Residual Use, Quarterly 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image027.png)
+![Figure 7: Feed and Residual Use, Quarterly 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image019.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
@@ -109,11 +109,11 @@ Unlike Exports which saw its biggest quarter of use in the second quarter of the
 
 Figure 8: shows the Feed and Residual category annually and figure 9 shows the category annually as a percent of production. 
 
-![Figure 8: Feed and Residual Use, Annual 1990-2015](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image029.png)
+![Figure 8: Feed and Residual Use, Annual 1990-2016](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image025.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
-![Figure 9: Feed and Residual Use, Annual 1990-2015 as a percent of production](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image028.png)
+![Figure 9: Feed and Residual Use, Annual 1990-2016 as a percent of production](Excel-files\IntroductiontoCommodityTS-FeedGrains_Corn_files\image031.png)
 
 Source: [Feed Grains database](http://www.ers.usda.gov/data-products/feed-grains-database/feed-grains-yearbook-tables.aspx#26780) maintained by the USDA ERS.
 
@@ -137,9 +137,9 @@ One method for forecasting the use categories during the marketing year, is to k
 
 We discussed above that ethanol production is the primary user of corn in the Food, Seed, and Industrial Category. This becomes obvious by comparing figure 10 below, which displays ethanol production and consumption over time, with figure 1 above. 
 
-![Figure 10: Annual Fuel Ethanol Production and Consumption 1990-2015](images\Ethanolchart.png)
+![Figure 10: Annual Fuel Ethanol Production and Consumption 1990-2016](Excel-files\Forecastinguseof_Fuel_Ethanol_Overview_files\image001.png)
 
-Source: Figure 10 was downloaded directly from the [EIA](http://www.eia.gov/totalenergy/data/monthly/#renewable) website. Click the link for access to the raw data. 
+Source: [EIA](http://www.eia.gov/totalenergy/data/monthly/#renewable) website. Click the link for access to the raw data. 
 
 Ethanol production and consumption begin to increase rapidly around 2005, which is when the Energy Policy Act of 2005 and later the Energy Security and Independence Act of 2007 created the Renewable Fuels Standard (RFS). The RFS mandated quantities of ethanol that blenders of gasoline are required to blend into the retail gasoline supply. These annual mandates are revised every year, but they were designed to steadily increase year after year until 2015 when the mandate reached 15 billion gallons per year. This figure came about because gasoline consumption in the United States was forecast to reach 150 billion gallons per year by 2015. So the RFS mandates were designed to reach the point where the entire retail gasoline supply would include 10% ethanol. Incidentally, 300,000,000 barrels indicated in Figure 10 corresponds to 15 billion gallons (300,000,000*50gallons/barrel = 15,000,000,000 gallons). The orange line shows that blenders of gasoline have been blending greater than 15 billion gallons of ethanol since 2010. 
 
@@ -203,7 +203,7 @@ Newton, J. "Reviewing the Pace of Corn and Soybean Exports." farmdoc daily (5):1
     d. Create a column in the table you produced from (c) that displays weekly percents of the five year average of export totals. 
     e. Place or create the table from (d) according to the following format in a separate worksheet from your other pivot table calculations.
     
-    | Weeks | 2015 % of 5 Yr Ave | 2015 | 2014 | 2013 | 2012 | 2011 | 2010 | 
+    | Weeks | 2016 % of 5 Yr Ave | 2016 | 2015 | 2014 | 2013 | 2012 | 2011 | 
     |:------|:-------------------|:-----|:-----|:-----|:-----|:-----|:-----|
     | 1     |                    |      |      |      |      |      |      |     
     | 2     |                    |      |      |      |      |      |      | 
