--- a/TheSoybeanCrush.Rmd
+++ b/TheSoybeanCrush.Rmd
@@ -15,17 +15,33 @@ bibliography: PriceAnalysis.bib
 
 In this Chapter we describe the physical process of converting soybeans into meal and oil, as well as the price relationship that is maintained between these highly related commodities. We saw in the chapter, 'Forecasting Use of Soybeans in the WASDE Balance Sheet,' that approximately half of the supply of soybeans in the U.S. is crushed into soybean meal and oil. Nearly all of the remainder of soybean supply is exported where most of it will be crushed abroad.
 
+![Soybean Oil and Soybean Meal](images/soyoilmeal_checkoff.jpg)
+Source: [United Soybean Board](http://unitedsoybean.org/), [Flicker](https://www.flickr.com/photos/unitedsoybean/10059732523/in/photolist-gjWL1c-iSHsD6-gjRZN5-gjSiez-gjRDSm-3GTus-gjT5Pf-gjT5FQ-gjT5Zf-iRrGux-5mxrJp-iRuCDS-fEhEb4-iSHt56-gjSLAj-gjTptX-gjSLDL-gjSNeR-gjSLEC-gjT72q-6m2BCX-gjSUHT-gjTpzi-6m6Jay-qBtpPq-5wBq3U-gjWLbe-aMpXNc-qRDdLA-gjWY8m-rujuvk-iRqECD-rNDaeg-GL7Qd-6m2Yyc-6JGi4H-ar3khU-cNjfUf-6m2A3g-aE4dw4-c3VUt9-c3VVq5-4JzMWS-6KY45z-6m2Xsv-6m6Eny-6m2XZg-6m2WVa-6m2ZFF-6m7ad1)
+
+
 # Oilseed Processing
 
-Now the most prevalant method for crushing soybeans is a method that uses a solvent to extract the oil from the soybean. Basically, soybeans are pretreated, then flaked to destry the cell walls so the solvent can get at the oil in the cells. A crude oil is then further prcesssed refined to remove the solvent and other compounds leaving only pure soybean oil. The soybean flakes, minus the oil are then ground in to meal that can be used as a high protein livestock feed. 
+Now the most prevalant method for crushing soybeans is a method that uses a solvent to extract the oil from the soybean. Basically, soybeans are pretreated, then flaked to destroy the cell walls so the solvent can get at the oil in the cells. A crude oil is then further prcesssed refined to remove the solvent and other compounds like glycerine, leaving only pure soybean oil. The soybean flakes, minus the oil are then ground in to meal that can be used as a high protein livestock feed. 
+
+![Soy Flakes](images/soyflakes.jpg)
+
+Source: [United Soybean Board](http://unitedsoybean.org/), [Flicker](https://www.flickr.com/photos/unitedsoybean/10059015936/)
+
+![Soymeal](images/soymeal.jpg)
+
+Source: [United Soybean Board](http://unitedsoybean.org/), [Flicker](https://www.flickr.com/photos/unitedsoybean/10059074033/)
+
+
+![Intermediate Soy Oil Products](images/crush_products.jpg)
+
+Source: [United Soybean Board](http://unitedsoybean.org/), [Flicker](https://www.flickr.com/photos/unitedsoybean/10058954054/)
+
 
 Hisorically, soybeans were processed by feeding soybeans into a mechanical press that literally squeezed the oil out. This process is less efficicent and more time consuming - thus more costly. Nearly all commercially crushed soybeans are done with with the solvent extraction method. 
 
 Crushing soybeans yields about 11lbs of oil and 44lbs meal per bushel of soybeans, these yields can vary slighly, but most use these values in the price analysis that will follow. 
 
 
-![Soybean Oil and Soybean Meal](images/soyoilmeal_checkoff.jpg)
-Source: [United Soybean Board](http://unitedsoybean.org/), [Flicker](https://www.flickr.com/photos/unitedsoybean/10059732523/in/photolist-gjWL1c-iSHsD6-gjRZN5-gjSiez-gjRDSm-3GTus-gjT5Pf-gjT5FQ-gjT5Zf-iRrGux-5mxrJp-iRuCDS-fEhEb4-iSHt56-gjSLAj-gjTptX-gjSLDL-gjSNeR-gjSLEC-gjT72q-6m2BCX-gjSUHT-gjTpzi-6m6Jay-qBtpPq-5wBq3U-gjWLbe-aMpXNc-qRDdLA-gjWY8m-rujuvk-iRqECD-rNDaeg-GL7Qd-6m2Yyc-6JGi4H-ar3khU-cNjfUf-6m2A3g-aE4dw4-c3VUt9-c3VVq5-4JzMWS-6KY45z-6m2Xsv-6m6Eny-6m2XZg-6m2WVa-6m2ZFF-6m7ad1)
 
 # Soybean Oil Uses
 
@@ -35,11 +51,15 @@ Soybean oil also can be futher processed into partially hydrogenated soybean oil
 
 Use of partially hydrogenated vegatable oils will decrease in coming years. Partially hydrogenated vegatable oils are examples of what is commonly referred to as *trans fat* in nutritional articles (and on the back of nutrition labels). Trans fat has been shown to [increase LDL cholesteral and heart disease](http://www.fda.gov/ForConsumers/ConsumerUpdates/ucm372915.htm) [@dri2002Nap]. The FDA announced a ban on most added trans fats in processed foods; the ban is set to take effect by 2018.
 
+![Partially Hydrogenated Soybean Oil](images/hydrogenated_oil.jpg)
+
+Source: [United Soybean Board](http://unitedsoybean.org/), [Flicker](https://www.flickr.com/photos/unitedsoybean/16910795086/)
+
 Soybean oil is also used in the production of biodiesel. This amounts to a small percentage of the total soybean oil produced, however.
 
 # Soybean Meal Uses
 
-Soybean meal is used exclusively for livestock feed as a high protein component. Beef cattle are fed soybean meal in a limited manner, with dairy cattle, hogs, and poultry using soybean meal more prevalently in feed rations. Soybean meal provides a good source of protein, and combined with cereal grains like corn allow a complete balence of essential amino acids that hogs and poultry must have. 
+Soybean meal is used exclusively for livestock feed as a high protein component. Beef cattle, dairy cattle, hogs, and poultry use soybean meal in feed rations. Soybean meal provides a good source of protein, and combined with cereal grains like corn allow a complete balence of essential amino acids that hogs and poultry must have. 
 
 ![Hogs](images/pigs.jpg)
 
@@ -70,7 +90,9 @@ So, adjusting equation 2. we get the expression for the **Crush Spread**.
 and this represents the **Gross Processing Margin** (GPM) for the soybean crushing plant. This spread is followed by industry participants as a gauge of profitability in the industry and as a signal of whether to expect expansion or contraction in the crush business. 
 
 
-![Figure 1: Gross Processing Margin Using December 2015 Soybean Oil and Meal Contracts and the November 2015 Soybeans Contract](Excel-files/TheSoybeanCrush-CME-SX2015_files/image002.png)
+![Figure 1: Gross Processing Margin Using Nearby Contracts for Soybean Oil, Meal, and Soybeans as of 10/11/2016](images/barchart_crush_spread.png)
+
+Source: [Barchart.com](www.Barchart.com)
 
 
 # The Board Crush
@@ -112,7 +134,7 @@ So the 1-1-1 spread does not represent equivalent quantities of soybeans, oil, a
 
 The commercial oil processers use a 9-11-10 spread of 9 contracts of soybean oil, 11 contracts of soybean meal, and 10 contracts of soybeans. 
 
-Then the quantities match more closely. Ten contracs of soybeans produces
+Then the quantities match more closely. Ten contracts of soybeans produces
 
 - $5,000*10*11 = 550,000$ lbs of soybean oil
 - $5,000*10*44 = 2,200,000$ lbs of soybean meal
