--- a/TheSoybeanCrush-Lecture.Rmd
+++ b/TheSoybeanCrush-Lecture.Rmd
@@ -157,6 +157,26 @@ This spread makes money when the spread narrows, or oil and meal go down while s
 
 # The 1-1-1 Spread
 
+One version of the board spread is called the 1-1-1 spread and it requires placing the following trades: 
+
+- Buy 1 contract soybean oil 
+- Buy 1 contract soybean meal
+- Sell 1 contract soybeans
+
+This position makes money when the spread widens, or oil and meal go up while soybeans goes down. This is called buying the spread. 
+
+# The 1-1-1 Spread  
+
+Another version is to sell the spread.
+
+- Sell 1 contract soybean oil 
+- Sell 1 contract soybean meal
+- Buy 1 contract soybeans
+
+This spread makes money when the spread narrows, or oil and meal go down while soybeans goes up. Soybean crushers can sell the spread (Sell oil and meal and buy soybean futures) to hedge their GPM. 
+
+# The 1-1-1 Spread  
+
 The 1-1-1 spread is a crude approximation of oil processing GPM but one needs to be careful about the quantities of each commodity represented. Futures contracts for soybean oil, soybean meal, and soybeans are for the following quantities: 
 
 - Soybean oil  ~ 60,000lbs
@@ -172,7 +192,7 @@ So the 1-1-1 spread does not represent equivalent quantities of soybeans, oil, a
 
 # The 9-11-10 Spread
 
-The commercial oil processers use a 9-11-10 spread of 9 contracts of soybean oil, 11 contracts of soybean meal, and 10 contracts of soybeans. 
+The commercial oil processers use a 9-11-10 spread of 9 contracts of soybean oil, 11 contracts of soybean meal, and 10 contracts of soybeans to hedge their GPM. 
 
 Then the quantities match more closely. Ten contracts of soybeans produces
 
